# checkers_client

./: CMakeLists.txt  README.md  application.cpp  application.h  application_window.cpp  application_window.h  auth_window.cpp  auth_window.h  board.cpp  board.h  cell.cpp  cell.h  checker.cpp  checker.h  color.cpp  color.h  create_room_window.cpp  create_room_window.h  friend_info.h  game_window.cpp  game_window.h  lobby.cpp  lobby.h  lobby_screen.cpp  lobby_screen.h  lobby_window.cpp  lobby_window.h  login_screen.cpp  login_screen.h  login_window.cpp  login_window.h  main.cpp  player_info.cpp  player_info.h  pos.cpp  pos.h  query.cpp  query.h  registration_window.cpp  registration_window.h  (+6 more)
